--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "vendor/cssh"]
 	path = vendor/cssh
 	url = https://github.com/dimitri/cssh.git
+[submodule "vendor/magit"]
+	path = vendor/magit
+	url = https://github.com/philjackson/magit.git
