--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,9 @@
 [submodule "vendor/liquid-mode"]
 	path = vendor/liquid-mode
 	url = https://github.com/rehanift/Emacs-Liquid.git
+[submodule "auto-complete"]
+	path = auto-complete
+	url = https://github.com/m2ym/auto-complete.git
+[submodule "auto-complete-etags"]
+	path = auto-complete-etags
+	url = https://github.com/emacsmirror/auto-complete-etags.git
