--- a/.gitmodules
+++ b/.gitmodules
@@ -14,8 +14,8 @@
 	path = vendor/liquid-mode
 	url = https://github.com/rehanift/Emacs-Liquid.git
 [submodule "auto-complete"]
-	path = auto-complete
+	path = vendor/auto-complete
 	url = https://github.com/m2ym/auto-complete.git
 [submodule "auto-complete-etags"]
-	path = auto-complete-etags
+	path = vendor/auto-complete-etags
 	url = https://github.com/emacsmirror/auto-complete-etags.git
