--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,7 @@
-loaddefs.el*
+elpa/*
+auto-save-list/*
 backups/*
-auto-save-list
-*elc
+vendor/*
+.smex-items
 places
-url/cookies
-elpa-to-submit/jabber/jabber.info
-elpa-to-submit/nxhtml/etc/schema/xhtml-loader.rnc
-thumbs/*
-oddmuse/*
-.newsrc-dribble
-.nnmail-cache
-/#.newsrc-dribble#
-.svn
-.DS_Store
-image-dired/
-elim/
-elpa-to-submit/nxhtml/etc/schema/xhtml-loader.rnc~
-session*
-tramp
-\#*
-history
-ac-comphist.dat
+*~
