--- a/.gitmodules
+++ b/.gitmodules
@@ -1,24 +1,3 @@
-[submodule "vendor/spiffy"]
-	path = vendor/spiffy
-	url = git://github.com/smerritt/spiffy-elisp.git
-[submodule "vendor/cssh"]
-	path = vendor/cssh
-	url = https://github.com/dimitri/cssh.git
-[submodule "vendor/rvm"]
-	path = vendor/rvm
-	url = https://github.com/senny/rvm.el.git
-[submodule "vendor/liquid-mode"]
-	path = vendor/liquid-mode
-	url = https://github.com/rehanift/Emacs-Liquid.git
-[submodule "auto-complete"]
-	path = vendor/auto-complete
-	url = https://github.com/m2ym/auto-complete.git
-[submodule "auto-complete-etags"]
-	path = vendor/auto-complete-etags
-	url = https://github.com/emacsmirror/auto-complete-etags.git
-[submodule "vendor/emacs-solarized.git"]
-	path = vendor/emacs-solarized
+[submodule "vendor/emacs-color-theme-solarized"]
+	path = vendor/emacs-color-theme-solarized
 	url = https://github.com/sellout/emacs-color-theme-solarized.git
-[submodule "vendor/rspec-mode"]
-	path = vendor/rspec-mode
-	url = https://github.com/pezra/rspec-mode.git
